[project]
name = "atumm-tool"
version = "0.1.0"
description = "CLI interface to autogenerate directory structure and stubs"
authors = [
    {name = "Omars", email = "omar@atumm.org"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
atumm-tool = "atumm.tool.entrypoints.main:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
